--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "wixel/gump": "1.3",
     "servo/fluidxml": "^1.20",
     "swiftmailer/swiftmailer": "@stable",
-    "mustache/mustache": "^2.11"
+    "mustache/mustache": "^2.11",
+    "parsecsv/php-parsecsv": "^0.4.5"
   },
   "autoload": {
     "psr-4": {
